# pura_lingua

./: .gitignore  Cargo.toml  CopyToPuralingua.ps1  README.md
.cargo/: config.toml
TestData/: MiddleIR.SimpleConsole.plb  MsgboxTest.plb  SimpleConsoleTest.plb  SimpleIR.SimpleConsole.plb  System.plb  Test.plb  TestInterface.plb  TestNormalF.plb
binary/: .gitignore  Cargo.toml
binary/src/: assembly.rs  core.rs  custom_attribute.rs  implement.rs  item_token.rs  lib.rs  tests.rs  ty.rs
binary/src/ty/: class.rs  field.rs  generic.rs  interface.rs  method.rs  struct.rs
binary_core/: Cargo.toml
binary_core/src/: error.rs  file.rs  integers.rs  lib.rs  section.rs  traits.rs
binary_core/src/traits/: derive_test.rs  implementations.rs
binary_core/src/traits/implementations/: iterators.rs  option.rs  primitive.rs  range.rs  string.rs
binary_proc_macros/: Cargo.toml
binary_traits/: Cargo.toml
binary_traits/src/: implementations.rs  lib.rs
binary_traits/src/implementations/: item_token.rs  pointers.rs  primitive.rs
binary_types/: Cargo.toml
binary_types/src/: integer.rs  item_token.rs  lib.rs
c_basic/: Cargo.toml
c_definitions/: Cargo.toml
common_attributes/: Cargo.toml
common_attributes/src/: lib.rs
dynamic/: Cargo.toml
dynamic_format/: Cargo.toml
executables/basic_runner/: Cargo.toml
executables/basic_runner/src/: main.rs
global/: .gitignore  Cargo.toml
global/src/: assertions.rs  attrs.rs  configs.rs  env_utils.rs  find_util.rs  freeze_lock.rs  instruction.rs  lib.rs  macros.rs  non_purus_call_configuration.rs  path_searcher.rs  std2c.rs  sync.rs  traits.rs
global/src/instruction/: register_addr.rs  v1.rs  v2.rs
global/src/instruction/v1/: jumping.rs
global/src/instruction/v2/: calculate.rs  call.rs  check.rs  jump.rs  load.rs  new.rs  read_write_pointer.rs  register_addr.rs  set.rs
global_errors/: Cargo.toml
global_errors/src/: errors.rs
global_proc_macros/: Cargo.toml
global_proc_macros/src/: all_variants.rs  attr.rs  custom_partial_eq.rs  define_instruction.rs  derive_map.rs  lib.rs  str_enum.rs  thread_safe.rs  transpose.rs  unwrap_enum.rs  with_type.rs
isa/: Cargo.toml
isa/src/: calculate.rs  call.rs  check.rs  jump.rs  lib.rs  load.rs  new.rs  read_write_pointer.rs  register_addr.rs  set.rs  stack_allocate.rs
native_exports/: README.md
non_purus_call/: Cargo.toml
proc_macro_utils/: Cargo.toml
rt_proc_macro_shared/: Cargo.toml
rt_stdlib/: Cargo.toml  README.md  a.rs  generate_integer_definitions.ps1
rt_stdlib/default/: core.json
rt_stdlib/src/: System.rs  definitions.rs  lib.rs
rt_stdlib/src/System/: AllocException.rs  Array_1.rs  Boolean.rs  Char.rs  DlErrorException.rs  DynamicLibrary.rs  Environment.rs  ErrnoException.rs  Exception.rs  IDispose.rs  IndexOutOfRangeException.rs  Integers.rs  InvalidEnumException.rs  LargeString.rs  NonPurusCallConfiguration.rs  NonPurusCallType.rs  NullReferenceException.rs  Nullable_1.rs  Object.rs  Pointer.rs  Reference_1.rs  Reflection.rs  RuntimeBasic.rs  Span_1.rs  String.rs  ThreadLocal_1.rs  Tuple.rs  ValueType.rs  Void.rs  Win32Exception.rs  _Integer.tpl.rs
rt_stdlib/src/System/Integers/: ISize.rs  Int16.rs  Int32.rs  Int64.rs  Int8.rs  UInt16.rs  UInt32.rs  UInt64.rs  UInt8.rs  USize.rs
rt_stdlib/src/System/Reflection/: AssemblyInfo.rs  FieldInfo.rs  MethodInfo.rs  ParameterInfo.rs  TypeInfo.rs
rt_stdlib_proc_macros/: Cargo.toml
rt_stdlib_proc_macros/src/: define_core_class.rs  define_core_interface.rs  define_core_struct.rs  lib.rs
rt_stdlib_serde/: Cargo.toml
rt_stdlib_serde/default/: core.json
rt_stdlib_serde/src/: definitions.rs  lib.rs
runtime/: Cargo.toml  README.md  clippy.toml
runtime/docs/: INDEX.md  exception.md
runtime/src/: c_ffi.rs  error.rs  global_tests.rs  lib.rs  libffi_utils.rs  llvm_utils.rs  memory.rs  stdlib.rs  test_utils.rs  type_system.rs  utils.rs  value.rs  virtual_machine.rs
runtime/src/memory/: owned_ptr.rs  tests.rs  thread_safe_ptr.rs
runtime/src/stdlib/: System.rs  definitions.rs
runtime/src/stdlib/System/: AllocException.rs  Array.rs  Array_1.rs  Boolean.rs  Char.rs  DlErrorException.rs  DynamicLibrary.rs  Environment.rs  ErrnoException.rs  Exception.rs  IDispose.rs  IndexOutOfRangeException.rs  InvalidEnumException.rs  LargeString.rs  NonPurusCallConfiguration.rs  NonPurusCallType.rs  NullReferenceException.rs  Nullable.rs  Nullable_1.rs  Object.rs  Pointer.rs  Reference_1.rs  Reflection.rs  RuntimeBasic.rs  Span_1.rs  String.rs  ThreadLocal_1.rs  Tuple.rs  ValueType.rs  Void.rs  Win32Exception.rs  _Integers.rs
runtime/src/stdlib/System/Array_1/: tests.rs
runtime/src/stdlib/System/DynamicLibrary/: impl.rs  tests.rs
runtime/src/stdlib/System/DynamicLibrary/impl/: unix.rs  windows.rs
runtime/src/stdlib/System/Reflection/: AssemblyInfo.rs  FieldInfo.rs  MethodInfo.rs  ParameterInfo.rs  TypeInfo.rs
runtime/src/stdlib/System/RuntimeBasic/: allocation.rs
runtime/src/stdlib/System/ThreadLocal_1/: tests.rs
runtime/src/type_system/: assembly.rs  assembly_manager.rs  cached_type_reference.rs  class.rs  field.rs  generics.rs  get_traits.rs  interface.rs  method.rs  method_table.rs  reflection_info_container.rs  struct.rs  type_handle.rs  type_ref.rs
runtime/src/type_system/assembly_manager/: load_binary.rs
runtime/src/type_system/method/: calling.rs  default_entry_point.rs  display.rs  exception_table.rs  parameter.rs  tests.rs
runtime/src/type_system/method/default_entry_point/: calculate.rs  call.rs  check.rs  jump.rs  load.rs  new.rs  read_write_pointer.rs  set.rs  stack_allocate.rs
runtime/src/type_system/method_table/: display.rs
runtime/src/type_system/type_handle/: convert.rs  tests.rs
runtime/src/value/: managed_reference.rs  object_header.rs
runtime/src/value/managed_reference/: for_array.rs  for_class.rs  for_field.rs  for_large_string.rs  for_string.rs  for_struct.rs
runtime/src/virtual_machine/: cpu.rs  cpu_manager.rs  resource.rs  tests.rs
runtime/src/virtual_machine/cpu/: call_stack.rs  exception.rs  gc.rs  mem_record.rs  non_purus_call.rs  tests.rs
src/: _lib.rs
(+38 files in other folders)
