[package]
name = "pura_lingua_binary"
edition = "2024"
version.workspace = true

[dependencies]
bitfields = { workspace = true }
indexmap = { workspace = true }

binary_core = { path = "../binary_core", package = "pura_lingua_binary_core" }
proc_macros = { path = "../binary_proc_macros", package = "pura_lingua_binary_proc_macros" }
global = { package = "pura_lingua_global", path = "../global" }

derive_more = { version = "2.0.1", features = ["display"] }

[dev-dependencies]
stdlib_header = { package = "pura_lingua_runtime_stdlib", path = "../rt_stdlib" }
