[package]
name = "pura_lingua_v2_binary_types"
edition = "2024"
version.workspace = true

[dependencies]
indexmap = { workspace = true }
bitfields = { workspace = true }

derive_more = { version = "2.0.1", features = ["display"] }
global_proc_macros = { package = "pura_lingua_v2_proc_macros", path = "../global_proc_macros" }
global_errors = { package = "pura_lingua_v2_global_errors", path = "../global_errors" }
