[package]
name = "pura_lingua_isa"
edition = "2024"
version.workspace = true

[dependencies]
num_enum = { workspace = true }
bitfields = { workspace = true }
derive_more = { workspace = true }

global_proc_macros = { workspace = true }
non_purus_call = { workspace = true }

binary_core = { workspace = true }
binary_proc_macros = { workspace = true }
