[package]
name = "pura_lingua_runtime_stdlib_proc_macros"
edition = "2024"
version.workspace = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
shared = { package = "pura_lingua_runtime_proc_macro_shared", path = "../rt_proc_macro_shared" }
proc_macro_utils = { workspace = true }

[lib]
proc-macro = true
