[package]
name = "pura_lingua_runtime_stdlib_serde"
edition = "2024"
version.workspace = true

[dependencies]
global = { workspace = true }
stdlib_header = { package = "pura_lingua_runtime_stdlib", path = "../rt_stdlib" }
proc_macros = { package = "pura_lingua_runtime_stdlib_serde_proc_macros", path = "../rt_stdlib_serde_proc_macros" }

enumflags2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.3"
serde_json = { version = "1.0.149", features = ["indexmap"] }

[[bin]]
name = "puralingua_output_core_header"
path = "./src/bin/output.rs"

[features]
default = ["__when_serialize"]
__when_impl = []
__when_not_impl = []
__when_serialize = []
