[package]
name = "pura_lingua_basic_runner"
edition = "2024"
version.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive", "unicode", "wrap_help"] }
pura_lingua = { path = "../..", features = ["runtime", "binary"] }

[[bin]]
name = "pura-lingua-basic-runner"
path = "./src/main.rs"
